temp fix: AnnnouncementBar z-index: 0, bug introduced by 53bb0307dd9e15904b78a80fcab056a4720ef158

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -127,6 +127,7 @@ div[class^='announcementBar_'] {
   background-size: 1000% 1000%;
   animation: announcementBarBg 3s ease infinite;
   font-weight: 500;
+  z-index: 0 !important;
 }
 
 @keyframes announcementBarBg {
